changed email address

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
           </div>
           <div class="text" style="font-size: 4em; font-weight: bold;">
             <p>Inquire via Email!</p>
-            <p>Staff@28xStaffing.com</p>
+            <p>support@28xStaffing.com</p>
           </div>
         </div>
       </div>
